fix: Add about-link and Delete #title on mobile

--- a/css/desktop.css
+++ b/css/desktop.css
@@ -233,6 +233,9 @@ header ul li {
 	padding-top: 20px;
 	border-top: 1px solid #000;
 }
+.about-link{
+	display: none;
+}
 
 /*project-----------------------------------------------------*/
 
